--- a/ensayoplatzi.html
+++ b/ensayoplatzi.html
@@ -4,7 +4,12 @@
 
     </head>
     <body>
-        <h1>este es el titulo</h1>
-        <p>esto es un parrafo</p>
+        <div id="container">
+            <div>
+                <h1>este es el titulo</h1>
+                <p>esto es un parrafo</p>
+            </div>
+
+        </div>
     </body>
 </html>
