cambie color h1 para conflicto

--- a/ensayoplatzi.html
+++ b/ensayoplatzi.html
@@ -6,6 +6,7 @@
     <body>
         <div id="container">
             <div>
+                <h1>este es de cabecera</h1>
                 <h1>este es el titulo</h1>
                 <p>esto es un parrafo</p>
             </div>
