--- a/proyectococa/index.html
+++ b/proyectococa/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="description" content="proyecto coca-cola
-    desarrollado por julian camacho">
+    desarrollado por julian david camacho">
     <meta name="keywords" content="bebida, gaseosa, coca-cola">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
